Modify server.sh, add MyScheduler class